--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,15 @@
 
 @tailwind utilities;
 
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Playfair Display';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+.blog-post p {
+  @apply my-5;
 }
